# justmyresource-icons

./: .gitignore  README.md  justfile  plan.md  pyproject.toml
.cursor/rules/: upstream-toml.mdc
pack-tools/: README.md  pyproject.toml
pack-tools/src/justmyresource_pack_tools/: __init__.py  archive.py  cli.py  config.py  download.py  manifest.py  normalize.py  protocol.py  readme.py  repack.py
pack-tools/src/justmyresource_pack_tools/templates/: readme.md.j2
packs/font-awesome/: LICENSE  README.md  pack.py  pyproject.toml  upstream.toml
packs/font-awesome/LICENSES/: FONT-AWESOME-ATTRIBUTION  FONT-AWESOME-LICENSE
packs/font-awesome/src/justmyresource_font_awesome/: __init__.py  pack_manifest.json
packs/heroicons/: README.md  pack.py  pyproject.toml  upstream.toml
packs/heroicons/LICENSES/: HEROICONS-LICENSE
packs/heroicons/src/justmyresource_heroicons/: __init__.py  pack_manifest.json
packs/lucide/: README.md  pack.py  pyproject.toml  upstream.toml
packs/lucide/LICENSES/: LUCIDE-LICENSE
packs/lucide/src/justmyresource_lucide/: __init__.py  pack_manifest.json
packs/material-community/: README.md  pack.py  pyproject.toml  upstream.toml
packs/material-community/LICENSES/: MDI-LICENSE
packs/material-community/src/justmyresource_mdi/: __init__.py  pack_manifest.json
packs/material-official/: README.md  pack.py  pyproject.toml  upstream.toml
packs/material-official/LICENSES/: MATERIAL-ICONS-LICENSE  MATERIAL-ICONS-NOTICE
packs/material-official/src/justmyresource_material_icons/: __init__.py  pack_manifest.json
packs/phosphor/: README.md  pack.py  pyproject.toml  upstream.toml
packs/phosphor/LICENSES/: PHOSPHOR-LICENSE
packs/phosphor/src/justmyresource_phosphor/: __init__.py  pack_manifest.json
