[project]
name = "justmyresource-lucide"
version = "0.575.0"
description = "JustMyResource pack: Lucide icons"
authors = [
    {name = "Kaj Siebert", email = "kaj@k-si.com"}
]
license = {text = "MIT AND ISC"}
license-files = ["LICENSE", "LICENSES/*"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["justmyresource>=1.0.0,<2.0.0"]
keywords = ["icons", "lucide", "svg", "resources", "justmyresource"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kws/justmyresource-icons"
Repository = "https://github.com/kws/justmyresource-icons"
Issues = "https://github.com/kws/justmyresource-icons/issues"

[project.entry-points."justmyresource.packs"]
lucide = "justmyresource_lucide:get_resource_provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justmyresource_lucide"]

[tool.hatch.build]
artifacts = [
    "*.zip",
    "pack_manifest.json",
]


